Release 2.0
=============
* dropped support django<2.0
* dropped support python<3

Release 1.3.2
=============
* fixes wrong `__eq__`   implementation

Release 1.3.1
=============
* sort names in combo box

Release 1.3
=============
* `import_error` now expects new argument with original exception

Release 1.2
=============
* add `import_error` attribute
* BACKWARD INCONPATIBLE: do not raise exception if ImportError
* drop support django < 1.10
* add support for DjangoRestFramework `contrib.drf`
* improved test suite


Release 1.1.1
=============
* fixes django 2.0 compatibility


Release 1.1
===========
* add support django 2.0
* drop support django <= 1.8
* registry can be callable
* do not register class used as Registry base class


Release 1.0
===========
* add 'display_attribute' to customize how registered classes should be displayed
* fixes display in Admin site change list
* Registry now accept string as fully qualified class name as argument or None to by-pass class checking
* Registry.register() now accept string as fully qualified class name as argument to allow a kind of  "lazy" registration
* new `contrib` package with some helper class


Release 0.5
===========
* fixes bugs for empty or null values in MultipleStrategyClassField
* dropped support for python3.3


Release 0.4
===========
* fixes bug wit DRF


Release 0.3 (07 May 2016)
=========================
* Django 1.10 support
* dropped support django 1.7
* do not need Registry


Release 0.2
===========
* Django 1.9 support


Release 0.1
===========
* initial release