@@ -1,6 +1,6 @@
 [tox]
 # as per https://docs.djangoproject.com/en/1.11/faq/install/#what-python-version-can-i-use-with-django
-envlist = d{20,21,22}-py{35,36,37}
+envlist = d{20,21,22}-py{36,37,38}
 
 skip_missing_interpreters = true
 
@@ -30,12 +30,6 @@ deps =
     d20: django>=2.0,<2.1
     d21: django>=2.1,<2.2
     d22: django>=2.2,<2.3
-    d{110,111}: djangorestframework<=3.6
-    d{110,111}: django-dynamic-fixture<1.8.4
-    d{110,111}: django-webtest<1.9.2
-    d{20,21}: djangorestframework>=3.7
-    d{20,21}: django-dynamic-fixture>1.8.4
-    d{20,21}: django-webtest>1.9.2
     dev: git+git://github.com/django/django.git#egg=django
 
 commands =
