@@ -2,6 +2,8 @@ Release 2.0
 =============
 * dropped support django<2.0
 * dropped support python<3
+* updates `fqn()` to handle functions
+* `import_by_name` caching
 
 Release 1.3.2
 =============
